# PracticeLogger

./: .gitattributes  .gitignore  .swiftlint.yml  ActiveSessionExtension.entitlements  ActiveSessionExtensionRelease.entitlements  ApolloClient.swift  Dev.xcconfig  GlobalSettings.swift  apollo-codegen-config.json  schema.graphqls  schema.sql  setup_db.sh
data_ingest/: .gitattributes  .gitignore  dev.ipynb  main.py  pyproject.toml  pytest.ini  test_df.parquet  utils.py
data_ingest/collections_mapping/: albeniz_isaac.json  bach_carl_philipp_emanuel.json  bach_johann_sebastian.json  bach_johannsebastian.json  balakirev_mily.json  bartok_bela.json  beethoven_ludwig_van.json  brahms_johannes.json  chopin_frederic.json  clementi_muzio.json  debussy_claude.json  dvorak_antonin.json  faure_gabriel.json  glinka_mikhail.json  grieg_edvard.json  haydn_joseph.json  hindemith_paul.json  hummel_johann_nepomuk.json  ives_charles.json  liszt_franz.json  medtner_nikolay.json  mendelssohn_felix.json  mozart_wolfgangamadeus.json  prokofiev_sergey.json  rachmaninoff_sergei.json  ravel_maurice.json  saint_saens_camille.json  schubert_franz.json  schumann_clara.json  schumann_robert.json  scriabin_aleksandr.json  tchaikovsky_pyotr.json
data_ingest/tests/: test_imslp_collection_scraper.py  test_parse_movements.py  test_piece.py
data_ingest/utils/: __init__.py  dev.ipynb  fetch_imslp.py  full_df.parquet  helpers.py  imslp_scraping.py  imslp_utils.py  movements.py  pieces.py  supabase_database.py  test.ipynb  write_to_pg.ipynb  write_to_pg.py
data_ingest/utils/enums/: piece_format.py
(+484 files in other folders)
